--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -27,7 +27,7 @@
     <% end %>
   </div>
 
-  <div id="status-box" class="alert alert-success">
+<!--   <div id="status-box" class="alert alert-success">
     <p id="status-message">Status: Haven’t done anything yet</p>
-  </div>
+  </div> -->
 </div>
