--- a/app/views/categories/_filter_result.html.erb
+++ b/app/views/categories/_filter_result.html.erb
@@ -4,9 +4,14 @@
       <div class="item  col-xs-4 col-lg-4">
         <div class="thumbnail">
           <img class="group list-group-image" src="<%= product.image.url %>" alt="" />
-          <div class="product-name"><%= product.name.truncate(20) %></div>
+          <div class="product-name row">
+            <h3><%= link_to product.name.truncate(20),product_path(product.id) %></h3>
+            <h4 class="pull-left"> 
+              <span style="color: green"><%= number_to_currency product.price %></span>
+            </h4>
+          </div>
           <div class="row">
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-6">
               <%= render "products/product_row", product: product, order_item: @order_item %>
             </div>
           </div>
@@ -17,7 +22,20 @@
 </div>
 
 <style type="text/css">
+  .product-name{
+    padding: 0 24px;
+  }
   .row{
-    margin-right: 10px
+    margin: 0;
+    padding: 10px;
+  }
+  .thumbnail{
+    padding: 0
+  }
+  h4{
+    margin: 0
+  }
+  .col-xs-6{
+    padding: 0
   }
 </style>
