--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
 
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <%= f.email_field :email, id: "login-username", class: "form-control", placeholder: "email", autofocus: true %>
+            <%= f.email_field :email, id: "login-username", class: "form-control", placeholder: "email", autofocus: true, required: true %>
           </div>
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -21,27 +21,27 @@
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
 
-            <%= f.password_field :password, id: "login-password", class: "form-control", placeholder: "password", autocomplete: "off" %>
+            <%= f.password_field :password, id: "login-password", class: "form-control", placeholder: "password", autocomplete: "off", required: true %>
           </div>
 
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <%= f.password_field :password_confirmation, id: "login-password", class: "form-control", placeholder: "confirm password", autocomplete: "off" %>
+            <%= f.password_field :password_confirmation, id: "login-password", class: "form-control", placeholder: "confirm password", autocomplete: "off", required: true %>
           </div>
 
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-flag"></i></span>
-            <%= f.text_field :country_code, id: "login-password", class: "form-control", placeholder: "Give correct country code", autocomplete: "off" %>
+            <%= f.text_field :country_code, id: "login-password", class: "form-control", placeholder: "Give correct country code", autocomplete: "off", required: true %>
           </div>
 
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-            <%= f.text_field :phone_number, id: "login-password", class: "form-control", placeholder: "phone number", autocomplete: "off" %>
+            <%= f.text_field :phone_number, id: "login-password", class: "form-control", placeholder: "phone number", autocomplete: "off", required: true %>
           </div>
 
           <div style="margin-top:10px" class="form-group">
             <div class="col-sm-12 controls">
-              <%= f.submit "Sign Up", id: "btn-login", class: "btn btn-success"%>
+              <%= f.submit "Sign Up", id: "btn-login", class: "btn btn-primary"%>
             </div>
           </div>
         <%end%>
@@ -50,3 +50,14 @@
     </div>
   </div>
 </div>
+
+<style type="text/css">
+  .panel-heading{
+    color:  aliceblue !important;
+    background-color: brown !important;
+    border-color: brown !important;
+  }
+  .panel-info{
+    border-color: brown !important;
+  }
+</style>
